--- a/src/documents/styles/style.css
+++ b/src/documents/styles/style.css
@@ -7,15 +7,22 @@ body {
 a{
     text-decoration: none;
 }
+.nav-header{
+    margin: 74px auto auto 173px;
+}
+    .main-menu-scrolled{
+        border-bottom: 7px solid #005EAC
+    }
 
 .muted{
     opacity: 0.7;
 }
 
 .logo-link{
-    margin:-22px 13px -22px -30px !important;
+    margin: -3px 13px -22px 90px !important;
     height: 90px !important;
     padding: 5px 12px !important;
+    float: left;
 }
     .logo-link img{
         margin: 18px 0 0 0;
@@ -142,10 +149,16 @@ a{
         .header .pure-menu li{
             border-radius: 3px;
             border: 1px solid rgba(0, 94, 172, 0.07);
+            border-radius: 3px;
+            border: 1px solid rgba(0, 94, 172, 0.07);
+            display: inline-block;
+            padding: 13px 33px;
+            float: left;
+            margin: auto 3px auto;
         }
 
-        .header .pure-menu li a:hover,
-        .header .pure-menu li a:focus {
+        .header .pure-menu li:hover,
+        .header .pure-menu li:focus {
             background: none;
             color: #aaa;
             border: 1px solid rgba(0, 94, 172, 1);
@@ -197,11 +210,13 @@ body .primary-button {
     margin: 0 0 0 29%;
 }
 .we-bitcoin{
-    width:577px;
+    width:233px;
     opacity: 0.555;
     cursor: pointer;
     text-align: right;
     border: none !important;
+    position:fixed;
+    top: 39px;
 }
     .we-bitcoin:hover{
         opacity: 1;
