--- a/src/documents/styles/style.css
+++ b/src/documents/styles/style.css
@@ -1,3 +1,19 @@
+::-webkit-scrollbar {
+    width: 17px;
+}
+ 
+::-webkit-scrollbar-track {
+    background: #fff;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.2); 
+    border-radius: 2px;
+}
+ 
+::-webkit-scrollbar-thumb {
+    background: #66879B;
+    border-radius: 2px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.2); 
+}
+
 body {
     margin: 0 auto;
     overflow-x:hidden;
@@ -8,12 +24,33 @@ a{
     text-decoration: none;
 }
 .nav-header{
-    margin: 74px auto auto 173px;
+    margin: 73px auto auto 173px;
 }
     .main-menu-scrolled{
+        background: #fff;
         border-bottom: 7px solid #005EAC !important;
-        margin-top: -90px;
-        height: 33px;
+        height: 93px;
+    }
+        .main-menu-scrolled ul.nav-header li{
+            border-bottom-left-radius: 3px;
+            border-bottom-right-radius: 3px;
+        }
+        .main-menu-scrolled .nav-header{
+            margin: 14px auto auto 173px;
+        }
+        .main-menu-scrolled .logo-link{
+            margin: -20px 13px -22px 90px !important;
+        }
+        .main-menu-scrolled .we-bitcoin{
+            top: 30px;
+        }
+    svg.hero-circle{
+        position: absolute;
+        right: 74px;
+        top: 135px;
+    }
+    svg.hero-circle circle{
+        fill: rgba(255, 255, 255, 0.21);
     }
 
 .muted{
@@ -151,17 +188,18 @@ a{
         .header .pure-menu li{
             border-radius: 3px;
             border: 1px solid rgba(0, 94, 172, 0.07);
-            border-radius: 3px;
-            border: 1px solid rgba(0, 94, 172, 0.07);
             display: inline-block;
             padding: 13px 33px;
             float: left;
             margin: auto 3px auto;
+            background: #fff;
+            border-bottom-left-radius: 0;
+            border-bottom-right-radius: 0;
         }
 
         .header .pure-menu li:hover,
         .header .pure-menu li:focus {
-            background: none;
+            /*background: none;*/
             color: #aaa;
             border: 1px solid rgba(0, 94, 172, 1);
         }
@@ -180,7 +218,7 @@ body .primary-button {
     height: 251px;
     padding: 3em 0.5em;
     border-radius: 13px;
-    background: #005EAC;
+    background: #005EAC url(https://3b1014479e60a166ba9ba71bdea37b36463bf4d9.googledrive.com/host/0B9LVk4xbDIJTZ0FUbXk0a1hjcHM) bottom no-repeat;
     margin: 109px auto 77px;
 }
     .splash .splash-head {
