--- a/src/documents/styles/style.css
+++ b/src/documents/styles/style.css
@@ -74,6 +74,7 @@ a{
 }
     .logo-link img{
         margin: 18px 0 0 0;
+        width: 134px;
         /* background: #fff;
         border-radius: 66px; */
     }
