--- a/src/partials/blue-shapes.html
+++ b/src/partials/blue-shapes.html
@@ -1,5 +1,5 @@
 <!--Adobe Edge Runtime-->
-    <script type="text/javascript" charset="utf-8" src="https://a40d7762df189c5351e89a442c8892acaaaae49d.googledrive.com/host/0B9LVk4xbDIJTU0JBQXMycXUxT0U"></script>
+    <script type="text/javascript" charset="utf-8" src="edge_includes/edge.6.0.0.min.js"></script>
     <style>
         .edgeLoad-EDGE-37101967 { visibility:hidden; }
     </style>
