Loading web resolution blue mountain images.

--- a/src/documents/styles/style.css
+++ b/src/documents/styles/style.css
@@ -19,7 +19,7 @@ body {
     overflow-x:hidden;
     line-height: 1.7em;
     font-family: 'Open Sans', sans-serif;
-    background:url(https://54417d96b6074577cf5a902e1a4e8f9399203b79.googledrive.com/host/0B9LVk4xbDIJTVDFvZWFwb1llRTQ);
+    background:url(https://745ee71aa6c1f4da35d12eaf0110b243e8cd44c8.googledrive.com/host/0B9LVk4xbDIJTdGwyWGEwcmhRcFU);
 }
 a{
     text-decoration: none;
@@ -32,7 +32,7 @@ a{
     margin: 73px auto auto 173px;
 }
     .main-menu-scrolled{
-        background: url(https://54417d96b6074577cf5a902e1a4e8f9399203b79.googledrive.com/host/0B9LVk4xbDIJTVDFvZWFwb1llRTQ) 0 97px;
+        background: url(https://745ee71aa6c1f4da35d12eaf0110b243e8cd44c8.googledrive.com/host/0B9LVk4xbDIJTdGwyWGEwcmhRcFU) 0 97px;
         border-bottom: 7px solid #005EAC !important;
         height: 93px;
     }
@@ -370,7 +370,7 @@ body .primary-button {
         color: #fff; /* #005EAC */
         border-top-left-radius: 13px;
         border-top-right-radius: 13px;
-        background: #005EAC url(https://54417d96b6074577cf5a902e1a4e8f9399203b79.googledrive.com/host/0B9LVk4xbDIJTVDFvZWFwb1llRTQ) 0 -140px;
+        background: #002D42 url(https://745ee71aa6c1f4da35d12eaf0110b243e8cd44c8.googledrive.com/host/0B9LVk4xbDIJTdGwyWGEwcmhRcFU) 0 -140px;
     }
 
 .footer {
