--- a/src/partials/blue-shapes.html
+++ b/src/partials/blue-shapes.html
@@ -1,5 +1,5 @@
 <!--Adobe Edge Runtime-->
-    <script type="text/javascript" charset="utf-8" src="edge_includes/edge.6.0.0.min.js"></script>
+    <script type="text/javascript" charset="utf-8" src="/edge_includes/edge.6.0.0.min.js"></script>
     <style>
         .edgeLoad-EDGE-37101967 { visibility:hidden; }
     </style>
