Fixing Edge Composition path.

--- a/src/partials/blue-shapes.html
+++ b/src/partials/blue-shapes.html
@@ -4,7 +4,7 @@
         .edgeLoad-EDGE-37101967 { visibility:hidden; }
     </style>
 <script>
-   AdobeEdge.loadComposition('homepage-hero', 'EDGE-37101967', {
+   AdobeEdge.loadComposition('/homepage-hero', 'EDGE-37101967', {
     scaleToFit: "width",
     centerStage: "none",
     minW: "0px",
