Fixing Edge Animation js file paths and removing cleanurls plugin so it doesnt clash with CloudFlare.

--- a/src/partials/tech-animation.html
+++ b/src/partials/tech-animation.html
@@ -4,7 +4,7 @@
         .edgeLoad-EDGE-73945849 { visibility:hidden; }
     </style>
 <script>
-   AdobeEdge.loadComposition('/tech', 'EDGE-73945849', {
+   AdobeEdge.loadComposition('../tech', 'EDGE-73945849', {
     scaleToFit: "width",
     centerStage: "horizontal",
     minW: "0px",
