--- a/src/documents/styles/style.css
+++ b/src/documents/styles/style.css
@@ -114,17 +114,23 @@ a{
 }
 
 .slogan{
-    width: 448px;
-    margin: 47px auto auto auto;
+    margin: auto;
     display: block;
     font-size: 25px;
     line-height: 38px;
+    text-align:center;
 }
 
+    .slogan-buttons{
+        margin: -10px auto auto auto;
+        display: block;
+    }
     .slogan .pure-button{
         border-radius: 13px;
-        margin: -129px 3px auto 9px;
-        padding: .3em 1.4em .3em .7em;
+        margin: auto 3px auto 9px;
+        padding: .4em 1.4em .3em .7em;
+        height: 51px;
+        width: 150px;
         box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
     }
 
@@ -147,14 +153,10 @@ a{
     clear: none;
     box-shadow: -1px -1px rgba(0,0,0,0.1);
 }
-#appBtn{
-    background: #E40808; background: rgba(228, 8, 8, 0.18);
-    border: 2px solid #E40808;
-    padding: 0.3em 1.3em .2em .6em;
-}
+
     #appBtn i{
         font-size: 29px;
-        color: #fff;
+        color: red;
     }
     #appBtnIcon{
         background-size: 114%;
@@ -162,13 +164,14 @@ a{
         background-image: url(/icons/iconmonstr-window-apps-icon.svg);
     }
     #appBtnText{
-        color: #fff;
+        color: red;
     }
 
 #mblBtn{
-    background: #0078e7;
-    background: rgba(0, 120, 231, 0.35);
-    border: 2px solid #0078e7;
+    position: relative;
+    z-index: 2;
+    color: purple;
+    /*border: 2px solid #0078e7;*/
 }
 #mblBtnIcon{
     background-size: 115%;
@@ -475,6 +478,7 @@ article#page, article#post{
         
         .main-menu-scrolled{
                 height: 59px;
+                /*border-color: #FF008D;*/
         }
             .main-menu-scrolled .logo-link {
                 margin: -10px 13px -22px 0px !important;
@@ -482,7 +486,23 @@ article#page, article#post{
             .main-menu-scrolled .nav-header {
                 margin: 3px auto auto 0;
             }
-            
+        
+    .splash{
+        border-radius: 0;
+    }   
+    svg.hero-circle{
+        z-index: -1;
+    }
+    .slogan .pure-button{
+        width: 117px;
+        float: left;
+    }
+        #appBtnText, #appMblText{
+            font-size: 18px;
+        }
+        #appBtn i{
+            font-size: 23px;
+        }
     .our-perspective{
         padding: 39px;
         width: 77%;
